# Campus_Forum

./: .env  Cargo.toml  README.md
src/: .main.rs.kate-swp  admin.rs  auth.rs  db.rs  handler.rs  handlers.rs  main.rs  models.rs
static/: admin.html  index.html  login.html  register.html
static/js/: admin.js  login.js  register.js
static/styles/: styles.css
