[package]
name = "campus_forum"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }
bcrypt = "0.12"  # 用于密码加密
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }  # 添加 serde 依赖
serde_json = "1.0"  # 如果你需要处理 JSON 数据，也可以添加 serde_json
